# crossDev

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.bat  crossdev_preload.js  demo.html  excel_template_test_output.xlsx  settings.html  settings_embed.cpp.in
apps/cars/: CMakeLists.txt  app_handlers.cpp
apps/cars/handlers/: create_invoice_handler.cpp  create_invoice_handler.h
apps/mdbTosqlite/handlers/: mdbTosqlite_handler.cpp  mdbTosqlite_handler.h
bundle/php-macos/: php.ini
examples/: DEMO_OUTPUT.txt  README.md  component_demo.cpp  excel_invoice_test.cpp  excel_template_test.cpp  layout_demo.cpp
include/: app_handlers.h  app_runner.h  application.h  base64.h  button.h  component.h  component_collection.h  config_manager.h  container.h  control.h  event_handler.h  horizontal_layout.h  input_field.h  layout.h  message_handler.h  message_router.h  native_event_bus.h  platform.h  settings_embed.h  singleton_webview_window_manager.h  vertical_layout.h  webview.h  webview_window.h  window.h
include/excel/: excel_exporter.h  excel_image.h  excel_invoice.h  excel_layout.h  excel_paths.h  excel_sheet_ops.h
include/handlers/: app_info_handler.h  calculator_handler.h  context_menu_handler.h  create_window_handler.h  file_dialog_handler.h  file_system_handler.h  focus_window_handler.h  options_handler.h  read_file_handler.h  reload_main_content_handler.h  reload_main_window_handler.h  write_file_handler.h
ios/: Info.plist  README.md  create_xcode_project.sh  create_xcode_project_cmake.sh  generate_xcode_project.py
src/: app_handlers_stub.cpp  app_runner.cpp  application.cpp  base64.cpp  button.cpp  component.cpp  component_collection.cpp  config_manager.cpp  container.cpp  control.cpp  event_handler.cpp  horizontal_layout.cpp  input_field.cpp  layout.cpp  main.cpp  message_router.cpp  native_event_bus.cpp  singleton_webview_window_manager.cpp  vertical_layout.cpp  webview.cpp  webview_window.cpp  window.cpp
src/excel/: excel_exporter.cpp  excel_image.cpp  excel_invoice.cpp  excel_paths.cpp  excel_sheet_ops.cpp
src/handlers/: app_info_handler.cpp  calculator_handler.cpp  context_menu_handler.cpp  create_window_handler.cpp  file_dialog_handler.cpp  file_system_handler.cpp  focus_window_handler.cpp  options_handler.cpp  read_file_handler.cpp  reload_main_content_handler.cpp  reload_main_window_handler.cpp  write_file_handler.cpp
src/platform/: platform_impl.h
src/platform/ios/: AppDelegate.mm  app_ios.mm  button_ios.mm  container_ios.mm  filedialog_ios.mm  input_ios.mm  menu_ios.mm  webview_ios.mm  window_ios.mm
src/platform/linux/: app_linux.cpp  button_linux.cpp  container_linux.cpp  filedialog_linux.cpp  input_linux.cpp  linux_window_events.h  webview_linux.cpp  window_linux.cpp
src/platform/macos/: app_macos.mm  button_macos.mm  container_macos.mm  filedialog_macos.mm  input_macos.mm  menu_macos.mm  webview_macos.mm  window_macos.mm
src/platform/windows/: app_windows.cpp  button_windows.cpp  container_windows.cpp  filedialog_windows.cpp  input_windows.cpp  menu_windows.cpp  webview_windows.cpp  window_windows.cpp  windows_common.h
tests/: mock_platform.cpp  test_button.cpp  test_component.cpp  test_component_collection.cpp  test_container.cpp  test_control.cpp  test_layout.cpp  test_ownership.cpp  test_window.cpp
